--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml (nihai hali)
 version: '3.8'
 
 services:
@@ -12,25 +11,21 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
-    # ports:
-    #   - "5432:5432" # Sadece hosttan erişim gerekiyorsa açık bırakılabilir, aksi takdirde kaldırılabilir.
-                    # Node.js uygulaması Docker içinde olduğu için bu satıra ihtiyacımız yok.
-
-  node_app: # Node.js servisimiz
-    build: ./node-app # node-app klasöründeki Dockerfile'ı kullan
+    
+  node_app:
+    build: ./node-app
     restart: always
-    ports:
-      - "3001:3001" # Host'un 3001 portunu container'ın 3001 portuna yönlendir
-    environment: # Node.js uygulaması için ortam değişkenleri
+      - "3001:3001"
+    environment:
       DB_USER: myuser
       DB_PASSWORD: mypassword
       DB_NAME: my_service_db
-      DB_HOST: db # Docker ağı içinde veritabanı servisinin adı
+      DB_HOST: db
       DB_PORT: 5432
       PORT: 3001
-      MOCK_MIN_DELAY_MS: 50 # Mock servis gecikmesi için ortam değişkenleri
+      MOCK_MIN_DELAY_MS: 50
       MOCK_MAX_DELAY_MS: 500
-    depends_on: # Bu servisin 'db' servisi başladıktan sonra başlamasını bekler
+    depends_on:
       - db
 
 volumes:
