--- a/node-app/.env
+++ b/node-app/.env
@@ -1,8 +1,7 @@
-# node-app/.env
 DB_USER=myuser
 DB_PASSWORD=mypassword
 DB_NAME=my_service_db
-DB_HOST=db   # Node.js uygulaması Docker'da çalıştığı için DB servis adı
+DB_HOST=db 
 DB_PORT=5432
 PORT=3001
 MOCK_MIN_DELAY_MS=50
