--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:16-alpine
@@ -56,7 +54,24 @@ services:
       - "3000:3000"
     depends_on:
       - prometheus
+  
+  k6:
+    image: grafana/k6:latest
+    container_name: k6_load_tester
+    volumes:
+      - ./load-tests:/scripts
+    environment:
+      K6_PROMETHEUS_RW_SERVER_URL: http://prometheus:9090/api/v1/write
+      K6_PROMETHEUS_RW_PUSH_INTERVAL: 1s
+    command: sleep infinity
+    depends_on:
+      - node_app
+    networks:
+      - default
 
 volumes:
   db_data:
   grafana_data:
+
+networks:
+  default:
